<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"

            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_Profile"

            android:title="@string/menu_Profile" />
        <item
            android:id="@+id/nav_AboutUs"

            android:title="@string/menu_About_us" />
        <item
            android:id="@+id/nav_PrivacyPolicy"

            android:title="@string/menu_Privacy_Policy" />
        <item
            android:id="@+id/nav_Logout"

            android:title="@string/menu_Logout" />
    </group>
</menu>